objects/chatcomp__ChatterCompliance__c.object
<CustomObject>
    <description>Chatter Compliance by Arkus.</description>
    <fields>
        <fullName>chatcomp__Attachment__c</fullName>
        <label>Attachment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chatcomp__Attachment_name__c</fullName>
        <label>Attachment name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chatcomp__Attachment_url__c</fullName>
        <description>URL to the original attachment</description>
        <formula>HYPERLINK( chatcomp__Attachment__c , chatcomp__Attachment_name__c , &quot;_self&quot; )</formula>
        <inlineHelpText>URL to the original attachment</inlineHelpText>
        <label>Attachment url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chatcomp__Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chatcomp__Delete_date__c</fullName>
        <label>Deleted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chatcomp__Files_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Files Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chatcomp__Files_attached_exceeded_limit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This flag indicates that the attachment size exceeded the limit allowed by salesforce, therefore the attachment does not appear in the notes &amp; attachments related list.</inlineHelpText>
        <label>Files attached exceeded size limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chatcomp__Is_a_customer_group_member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This conversations is happening in a Customer Group.</description>
        <inlineHelpText>This conversations is happening in a Customer Group.</inlineHelpText>
        <label>Posted on a Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chatcomp__OriginalPostContent__c</fullName>
        <description>This is what the user actually wrote. If there was a banned word on the feed or comment it will be shown here. To see the post or comment as shown on the chatter screen, please see PostContent.</description>
        <inlineHelpText>This is what the user actually wrote. If there was a banned word on the feed or comment it will be shown here. To see the post or comment as shown on the chatter screen, please see PostContent.</inlineHelpText>
        <label>Original post content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>chatcomp__PostContentInformation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Get the user input and the system output on feeds and comments, should be the same as except that &quot;Substitute banned words with character&quot; option is enabled.</description>
        <inlineHelpText>Get the user input and the system output on feeds and comments, should be the same as except that &quot;Substitute banned words with character&quot; option is enabled.</inlineHelpText>
        <label>PostContentInformation</label>
        <referenceTo>chatcomp__ChatterCompliance_PostContentInformation__c</referenceTo>
        <relationshipLabel>Chatter Compliances</relationshipLabel>
        <relationshipName>Chatter_Compliances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chatcomp__PostContent__c</fullName>
        <label>Post Content</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>chatcomp__PostIdNew_url__c</fullName>
        <formula>HYPERLINK( chatcomp__PostId_New__c , chatcomp__PostId_New__c &amp; &quot; (original post)&quot;, &quot;_self&quot; )</formula>
        <label>Post</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chatcomp__PostId_New__c</fullName>
        <externalId>true</externalId>
        <label>PostId New</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chatcomp__PostId__c</fullName>
        <label>PostId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chatcomp__Post_Created_Date__c</fullName>
        <label>Post Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chatcomp__Post_made_by_an_outside_contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Chatter post is made by a Contact outside of the company.</description>
        <inlineHelpText>The Chatter post is made by a Contact outside of the company.</inlineHelpText>
        <label>Posted by a Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chatcomp__Posted_on_a_private_customer_group__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The post was made on a private Group.</description>
        <inlineHelpText>The post was made on a private Group.</inlineHelpText>
        <label>Posted on a private Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chatcomp__Related_record__c</fullName>
        <label>Related Record</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chatcomp__Related_record_name__c</fullName>
        <label>Related To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chatcomp__Related_record_url__c</fullName>
        <formula>HYPERLINK(chatcomp__Related_record__c,chatcomp__Related_record_name__c, &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chatcomp__TaskPost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chatcomp__This_message_is_a_ChatterMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked this message is a private Chatter message.</description>
        <inlineHelpText>If checked this message is a private Chatter message.</inlineHelpText>
        <label>Is a Chatter Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chatcomp__Update_Date__c</fullName>
        <label>Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chatcomp__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Chatter_Compliances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chatcomp__deletedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deleted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Chatter_Compliances1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chatcomp__update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update</label>
        <type>Checkbox</type>
    </fields>
    <label>Chatter Compliance</label>
    <listViews>
        <fullName>chatcomp__All1</fullName>
        <columns>NAME</columns>
        <columns>chatcomp__Related_record_url__c</columns>
        <columns>chatcomp__PostContent__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>chatcomp__User__c</columns>
        <columns>chatcomp__Post_Created_Date__c</columns>
        <columns>chatcomp__Delete__c</columns>
        <columns>chatcomp__Delete_date__c</columns>
        <columns>chatcomp__deletedBy__c</columns>
        <columns>chatcomp__Files_Attached__c</columns>
        <columns>chatcomp__This_message_is_a_ChatterMessage__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>chatcomp__All_Deleted_Posts</fullName>
        <columns>NAME</columns>
        <columns>chatcomp__Related_record_url__c</columns>
        <columns>chatcomp__User__c</columns>
        <columns>chatcomp__Post_Created_Date__c</columns>
        <columns>chatcomp__Delete__c</columns>
        <columns>chatcomp__Delete_date__c</columns>
        <columns>chatcomp__deletedBy__c</columns>
        <columns>chatcomp__Files_Attached__c</columns>
        <columns>chatcomp__This_message_is_a_ChatterMessage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>chatcomp__Delete__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Deleted Posts</label>
    </listViews>
    <listViews>
        <fullName>chatcomp__Last_7_Days</fullName>
        <columns>NAME</columns>
        <columns>chatcomp__Related_record_url__c</columns>
        <columns>chatcomp__User__c</columns>
        <columns>chatcomp__Post_Created_Date__c</columns>
        <columns>chatcomp__Delete__c</columns>
        <columns>chatcomp__Delete_date__c</columns>
        <columns>chatcomp__deletedBy__c</columns>
        <columns>chatcomp__Files_Attached__c</columns>
        <columns>chatcomp__This_message_is_a_ChatterMessage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>chatcomp__Post_Created_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Last 7 Days</label>
    </listViews>
    <listViews>
        <fullName>chatcomp__Last_7_Days_Attachments</fullName>
        <columns>NAME</columns>
        <columns>chatcomp__Related_record_url__c</columns>
        <columns>chatcomp__User__c</columns>
        <columns>chatcomp__Post_Created_Date__c</columns>
        <columns>chatcomp__Delete__c</columns>
        <columns>chatcomp__Delete_date__c</columns>
        <columns>chatcomp__deletedBy__c</columns>
        <columns>chatcomp__Files_Attached__c</columns>
        <columns>chatcomp__This_message_is_a_ChatterMessage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>chatcomp__Post_Created_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>chatcomp__Files_Attached__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Last 7 Days - Attachments</label>
    </listViews>
    <listViews>
        <fullName>chatcomp__Last_7_Days_Deleted</fullName>
        <columns>NAME</columns>
        <columns>chatcomp__Post_Created_Date__c</columns>
        <columns>chatcomp__Related_record_url__c</columns>
        <columns>chatcomp__User__c</columns>
        <columns>chatcomp__Delete__c</columns>
        <columns>chatcomp__Delete_date__c</columns>
        <columns>chatcomp__deletedBy__c</columns>
        <columns>chatcomp__Files_Attached__c</columns>
        <columns>chatcomp__This_message_is_a_ChatterMessage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>chatcomp__Post_Created_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>chatcomp__Delete__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Last 7 Days - Deleted</label>
    </listViews>
    <listViews>
        <fullName>chatcomp__Today_s_Posts</fullName>
        <columns>NAME</columns>
        <columns>chatcomp__Related_record_url__c</columns>
        <columns>chatcomp__User__c</columns>
        <columns>chatcomp__Post_Created_Date__c</columns>
        <columns>chatcomp__Delete__c</columns>
        <columns>chatcomp__Delete_date__c</columns>
        <columns>chatcomp__deletedBy__c</columns>
        <columns>chatcomp__Files_Attached__c</columns>
        <columns>chatcomp__This_message_is_a_ChatterMessage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>chatcomp__Post_Created_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Posts</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>ChatterCompliance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chatter Compliances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>